--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
   },
   "dependencies": {
     "css-loader": "^0.28.11",
+    "firebase": "^5.0.4",
     "node-sass": "^4.9.0",
     "nuxt": "^1.0.0",
     "sass-loader": "^7.0.3",
-    "vue-style-loader": "^4.1.0"
+    "vue": "^2.5.16",
+    "vue-style-loader": "^4.1.0",
+    "vuefire": "^1.4.5"
   },
   "devDependencies": {
     "babel-eslint": "^8.2.1",
