--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "nuxt": "^1.0.0",
     "sass-loader": "^7.0.3",
     "vue": "^2.5.16",
+    "vue-googlemaps": "^0.1.1",
     "vue-style-loader": "^4.1.0",
     "vuefire": "^1.4.5"
   },
