--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "nuxt": "^1.0.0",
     "sass-loader": "^7.0.3",
     "vue": "^2.5.16",
-    "vue-googlemaps": "^0.1.1",
     "vue-style-loader": "^4.1.0",
     "vuefire": "^1.4.5"
   },
@@ -28,6 +27,6 @@
     "eslint": "^4.15.0",
     "eslint-friendly-formatter": "^3.0.0",
     "eslint-loader": "^1.7.1",
-    "eslint-plugin-vue": "^4.0.0"
+    "eslint-plugin-vue": "^4.0.0",
   }
 }
