--- a/package.json
+++ b/package.json
@@ -28,5 +28,6 @@
     "eslint-friendly-formatter": "^3.0.0",
     "eslint-loader": "^1.7.1",
     "eslint-plugin-vue": "^4.0.0",
+    "vue-plugin-load-script": "^1.1.0"
   }
 }
